Buffy Sheet Fixes and V5 Update (#5012)
* Update Buffy Sheet

* Added further comments

--- a/Unisystem-Buffy or Angel/Buffy_or_Angel.html
+++ b/Unisystem-Buffy or Angel/Buffy_or_Angel.html
@@ -858,7 +858,7 @@
                             <td><button type='roll' class="sheet-skillbutton" value="/e rolls @{PowerRepeat-1} [[(@{base-Willpower} + @{mod-Willpower}) + @{Occultism_rating} + @{Sorcery_min_xy} + 1d10]] (Compare Success Levels of Roll to Power Level of Spell)"></button></td>
                             <td><input type="text" class="sheet-textbox" name="attr_PowerRepeat-1" /></td>
                             <td><input type="number" class="sheet-numberbox" name="attr_PowerRepeat_level-1" value="0" /></td>
-                            <td style="padding-left:13px" ><input type="checkbox" class="sheet-melee_toggle"name="attr_PowerRepeat_quick_cast-1"
+                            <td style="padding-left:13px"><input type="checkbox" class="sheet-melee_toggle" name="attr_PowerRepeat_quick_cast-1"
                                     value="1" /></td>
                         </tr>
 
@@ -870,8 +870,8 @@
                             <td><button type='roll' class="sheet-skillbutton" value="/e rolls @{PowerRepeat-11} [[(@{base-Willpower} + @{mod-Willpower}) + @{Occultism_rating} + @{Sorcery_min_xy} + 1d10]] (Compare Success Levels of Roll to Power Level of Spell)"></button></td>
                             <td><input type="text" class="sheet-textbox" name="attr_PowerRepeat-11" /></td>
                             <td><input type="number" class="sheet-numberbox" name="attr_PowerRepeat_level-11" value="0" /></td>
-                            <td style="padding-left:13px" ><input type="checkbox" class="sheet-melee_toggle" style="padding-left:13px" name="attr_PowerRepeat_quick_cast-11"
-                                    value="1" /></td>
+                            <td style="padding-left:13px"><input type="checkbox" class="sheet-melee_toggle" style="padding-left:13px"
+                                    name="attr_PowerRepeat_quick_cast-11" value="1" /></td>
 
                         </tr>
                     </table>
@@ -1034,20 +1034,24 @@
             </tr>
             <!-- Disarm / Parry -->
             <tr>
-                <!-- Disarm --> <!-- TODO This is incorrect. See page 131 in the revised book -->
+                <!-- Disarm -->
+                <input type="hidden" disabled="true" name="attr_max_Disarmxy" value="((((@{Getting_Medieval_rating}-2) + (@{Kung_Fu_rating}-3) + abs((@{Getting_Medieval_rating}-2) - (@{Kung_Fu_rating}-3)) / 2)"
+                />
                 <th><button type='roll' class="sheet-skillbutton" value="/e attacks with @{Disarm_name-1} (resisted roll), rolling [[@{base-Dexterity} + @{mod-Dexterity} + @{Disarm_attack_rating-1} + d10]]."></button></th>
                 <td><input type="hidden" class="sheet-textbox" style="width:200px" value="Disarm" disabled="true" name="attr_Disarm_name-1"
                     />&nbsp;&nbsp;&nbsp;Disarm</td>
-                <th><input type="number" class="sheet-numberbox" name="attr_Disarm_attack_rating-1" value="@{Kung_Fu_rating}-2"
+                <th><input type="number" class="sheet-numberbox" name="attr_Disarm_attack_rating-1" value="@{max_Disarmxy}"
                         disabled="true" /></th>
                 <th class="sheet-lb"><input type="text" class="sheet-textbox" style="width:70px" value="pg 131" disabled="true"
                     /></th>
                 <th class="sheet-lb"></th>
-                <!-- Parry --> <!-- TODO Needs to be updated-->
+                <!-- Parry -->
+                <input type="hidden" disabled="true" name="attr_max_Parryxy" value="(((@{Getting_Medieval_rating} + @{Kung_Fu_rating}) + abs(@{Getting_Medieval_rating} - @{Kung_Fu_rating})) / 2)"
+                />
                 <th class="sheet-lb"><button type='roll' class="sheet-skillbutton" value="/e attacks with @{Parry_name-1}, rolling [[@{base-Dexterity} + @{mod-Dexterity} + @{Parry_attack_rating-1} + d10]]."></button></th>
                 <td><input type="hidden" class="sheet-textbox" style="width:200px" value="Parry" disabled="true" name="attr_Parry_name-1"
                     />&nbsp;&nbsp;&nbsp;Parry</td>
-                <th><input type="number" class="sheet-numberbox" name="attr_Parry_attack_rating-1" value="@{Kung_Fu_rating}"
+                <th><input type="number" class="sheet-numberbox" name="attr_Parry_attack_rating-1" value="@{max_Parryxy}"
                         disabled="true" /></th>
                 <th class="sheet-lb"><input type="text" class="sheet-textbox" style="width:70px" value="pg 132" disabled="true"
                     /></th>
@@ -1074,11 +1078,12 @@
             </tr>
             <!-- Knock-Out / Head Butt -->
             <tr>
-                <!-- Knockout --> <!-- TODO Needs to update Page 132 -->
+                <!-- Knockout -->
                 <th><button type='roll' class="sheet-skillbutton" value="/e attacks with @{Knockout_name-1}, rolling [[@{base-Dexterity} + @{mod-Dexterity} + @{Knockout_attack_rating-1} + d10]] to hit (damage is halved)."></button></th>
                 <td><input type="hidden" class="sheet-textbox" style="width:200px" value="Knockout" disabled="true" name="attr_Knockout_name-1"
                     />&nbsp;&nbsp;&nbsp;Knockout</td>
-                <th><input type="number" class="sheet-numberbox" name="attr_Knockout_attack_rating-1" value="@{Kung_Fu_rating}-2"
+                <!-- Max Parry is the max of Getting Medieval or Kung Fu. So the following agrees with pg 132 -->
+                <th><input type="number" class="sheet-numberbox" name="attr_Knockout_attack_rating-1" value="@{max_Parryxy}-2"
                         disabled="true" /></th>
                 <th class="sheet-lb"><input type="text" class="sheet-textbox" style="width:70px" value="pg 134" disabled="true"
                     /></th>
