--- a/vampire-v5/vampirev5.html
+++ b/vampire-v5/vampirev5.html
@@ -3651,6 +3651,18 @@
 
             <tr>
                 <td colspan="6" class="auto-style1" style="text-align: center">
+                    <h3>Setting up your characters.<br /></h3>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Much of the sheet should be self evident. It should be noted however that "Health", "Willpower", "Humanity" and any other such tracker should be filled in from the left to the right, with a filled box meaning that it exists. 
+                    Example: Whisky Jack has 7 health levels, 5 willpower levels and 3 humanity. Under "Willpower", 5 boxes (from left to right) should be green. Under "Health", 7 of the boxes (from the left to the right) should be red and under Humanity, 3 of the boxes (from left to right) should be red. The Max WP and Max HP boxes are there merely as reminders for the maximum values you may heal to.
+                </td>
+            </tr>
+
+            <tr>
+                <td colspan="6" class="auto-style1" style="text-align: center">
                     <h3>Inline rolls.<br /></h3>
                 </td>
             </tr>
