--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -801,7 +801,7 @@
           </div>
           <div class="sheet-row sheet-twice sheet-Makro_mw">
             <textarea name="attr_meleeattack_makro">/me schlägt mit @{meleeweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{meleeweaponclass} + @{meleeweapontemp} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
-            <textarea name="attr_meleedamage_makro">/me und macht [[1d6! + ((@{st} - 1) + @{meleeweapondamage}) + ?{Modifier?|0}d6]] Schaden</textarea>
+            <textarea name="attr_meleedamage_makro">/me und macht [[1d6! + ((@{st} - 1) + ?{Modifier?|0})d6 + @{meleeweapondamage}]] Schaden</textarea>
           </div>
         </div>
       </fieldset>
@@ -870,7 +870,7 @@
       <div class="sheet-col sheet-inv">
         <h3>Charaktermerkmale:</h3>
         <fieldset class="repeating_charMerkmale" style="margin:auto;">
-          <input type="text" style="width:85%" name="attr_charMerkmale" />
+          <input type="text" style="width:85%" name="attr_charMerkmale" />(<input type="number" style="width:10%;" name="attr_charMerkmale_punkte" />)
         </fieldset>
       </div>
   </div>
