BTATOW More CSS tweaking.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
@@ -429,7 +429,7 @@
 <!-- SKILLS -->
 <div class="tab-content tab3 main">
     <h1>Skills</h1>
-    <div>
+    <div class="skills-headings">
         <span>Skill</span>
         <span>Level</span>
         <span>Links</span>
