Cypher Systems v2.22 cl-uc461-translation fixes
translation fixes

--- a/Cypher Systems by Roll20/cypher_systems_by_roll20.html
+++ b/Cypher Systems by Roll20/cypher_systems_by_roll20.html
@@ -287,7 +287,7 @@
                                 <label class="inlcontent"  data-i18n-title="ability-stat" title="Stat used for this ability">
                                     <span class="lbl" data-i18n="stat">Stat</span>
                                     <select name="attr_abilitystat" style="text-transform: capitalize;" title="@{repeating_abilities_$ID_abilitystat}">
-                                        <option value="null" selected="none">None</option>
+                                        <option value="null" data-i18n="none" selected="selected">None</option>
                                         <option value="might" data-i18n="might">might</option>
                                         <option value="speed" data-i18n="speed">speed</option>
                                         <option value="intellect" data-i18n="intellect">intellect</option>
@@ -295,7 +295,7 @@
                                 </label>
                                 <div class="autoex" title="@{repeating_abilities_$ID_abilitydesc}">
                                     <span name="attr_abilitydesc"></span>
-                                    <textarea name="attr_abilitydesc" spellcheck="false" data-i18n-title="artifact-description" title="Description of the Artifact" data-i18n-placeholder="description" placeholder="Description"></textarea>
+                                    <textarea name="attr_abilitydesc" spellcheck="false" data-i18n-title="description" title="Description" data-i18n-placeholder="description" placeholder="Description"></textarea>
                                 </div>
                             </div>
                         </fieldset>
