uc-459 fixed Ravnica's Rakdos

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -7674,17 +7674,19 @@
                     if (spellList) {
                         Object.keys(spellList).map((objectKey, index) => {
                             spellList[objectKey].forEach((spell) => {
+                                console.log(spell);
                                 spellsobj.push(spell);
                             });
                         });
                     };
                 });
-                getCompendiumPage(spellsobj, (spellData) => {
+                getCompendiumPage(spellsobj, (compendiumPages) => {
+                    const spellData = (compendiumPages.length === undefined || compendiumPages.length === 1) ? [compendiumPages] : compendiumPages;
                     const innate = (jsonparse(page.data["data-Spells"])[`innate`]) ? jsonparse(page.data["data-Spells"])[`innate`] : false;
                     let existing = {};
                     let update   = [], callbacks = [];
 
-                    spellData.forEach((page) => {
+                   spellData.forEach((page) => {
                         const spell        = page.data;
                         const lvl          = spell["Level"] && spell["Level"] > 0 ? spell["Level"] : "cantrip";
                         const newrowid     = generateRowID();
