UC-384: add french translation

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -3066,7 +3066,7 @@
             var display = "";
             if(v.rollstyle === "@{roll_base}") {
                 if(order.length === 0) {
-                    display = "Simple Roll";
+                    display = getTranslationByKey("simple-roll");
                 }
                 else {
                     //display = order.join(" +\n");
