UC-384: translate 'Unarmed'

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -1074,7 +1074,7 @@
                                     </tr>
                                     <tr>
                                         <td><input type="radio" class="sheet-weapon" name="attr_attack" value="{{attack_name=@{attack_name0}}} {{weapon_damage=@{attack_damage0}}} {{range=@{attack_range0}}} @{attack_type0}" checked="checked" /><span></span>
-                                            <input type="text" name="attr_attack_name0" class="weaponstat name" disabled="disabled" value="Unarmed" /></td>
+                                            <input type="text" name="attr_attack_name0" class="weaponstat name" disabled="disabled" value="@{unarmedmacro}" /></td>
                                         <td class="selectcontainer">
                                             <select name="attr_attack_type0">
                                                 <option value="{{str=1}} {{bra=1}} {{result=[[{((@{strength}+@{brawl}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})" checked="checked" data-i18n="brawl" >Brawl</option>
@@ -1902,7 +1902,8 @@
 <input type="hidden" name="attr_rolltype" value=")d10!cs>10}>8]]}}" />
 <!-- Translation handles for sheetworkers -->
 <span style="display: none" data-i18n="dice-pool">Dice Pool</span>
-<!-- <span style="display: none" data-i18n="modifiers">Modifiers</span> -->
+<span style="display: none" data-i18n="modifiers">Modifiers</span>
+<span style="display: none" data-i18n="unarmed">Unarmed</span>
 
 </div>
 
@@ -2952,21 +2953,23 @@
         updatePotencyName();
         updateRollType();
     });
-// Translation functions
+// ---------------------------------- Translation functions ------------------------------------------
     on("sheet:opened", function(eventInfo){
-
         setAttrs({
             dicepoolmacro: getTranslationByKey("dice-pool")
         });
-
     });
 
     on("sheet:opened", function(eventInfo){
-
         setAttrs({
             modifiermacro: getTranslationByKey("modifiers")
         });
+    });
 
+    on("sheet:opened", function(eventInfo){
+        setAttrs({
+            unarmedmacro: getTranslationByKey("unarmed")
+        });
     });
 
     var updateRolls = function(stat) {
@@ -3343,11 +3346,11 @@
                     switch(v[`attack_type${i}`]) {
                         // Melee
                         case "{{2nd=1}} {{str=1}} {{wea=1}} {{result=[[{((@{strength}+@{weaponry}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})":
-                            update[`attack_type${i}`] = `{{1st=1}} {{str=1}} {{wea=1}} {{result=[[{((@{attack_damage${i}}+@{strength}+@{weaponry}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})`;
+                            update[`attack_type${i}`] = "{{1st=1}} {{str=1}} {{wea=1}} {{result=[[{((@{attack_damage${i}}+@{strength}+@{weaponry}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})";
                             break;
                         // Gun
                         case "{{2nd=1}} {{dex=1}} {{fir=1}} {{result=[[{((@{dexterity}+@{firearms}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})":
-                            update[`attack_type${i}`] = `{{1st=1}} {{dex=1}} {{fir=1}} {{result=[[{((@{attack_damage${i}}+@{dexterity}+@{firearms}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})`;
+                            update[`attack_type${i}`] = "{{1st=1}} {{dex=1}} {{fir=1}} {{result=[[{((@{attack_damage${i}}+@{dexterity}+@{firearms}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})";
                             break;
                         // Thrown
                         case "{{2nd=1}} {{dex=1}} {{ath=1}} {{result=[[{((@{dexterity}+@{athletics}+?{@{modifiermacro}|0}+@{wound_penalty}+@{weapon_penalty}+@{armor_penalty})":
