UC-384: DiceRoller box; attack translations

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -2971,7 +2971,7 @@
             unarmedmacro: getTranslationByKey("unarmed")
         });
     });
-
+// --------------------------------------------------------------------------------------------------
     var updateRolls = function(stat) {
         var type;
         var stat_flag = stat + "_flag";
@@ -3069,7 +3069,7 @@
             var display = "";
             if(v.rollstyle === "@{roll_base}") {
                 if(order.length === 0) {
-                    display = getTranslationByKey("simple-roll");
+                    display = `${display}${getTranslationByKey("simple-roll")}\n`
                 }
                 else {
                     //display = order.join(" +\n");
@@ -3081,26 +3081,26 @@
                 var regex = /attack_type(.)/;
                 var attack_type = "attack_type" + v.attack.match(regex)[1];
                 if(v[attack_type].indexOf("str=1") > -1) {
-                    display = display + "Strength +\n"
+                    display = `${display}${getTranslationByKey("strength")}\n`
                 }
                 if(v[attack_type].indexOf("dex=1") > -1) {
-                    display = display + "Dexterity +\n"
+                    display = `${display}${getTranslationByKey("dexterity")}\n`
                 }
                 if(v[attack_type].indexOf("bra=1") > -1) {
-                    display = display + "Brawl"
+                    display = `${display}${getTranslationByKey("brawl")}\n`
                 }
                 if(v[attack_type].indexOf("wea=1") > -1) {
-                    display = display + "Weaponry"
+                    display = `${display}${getTranslationByKey("weaponry")}\n`
                 }
                 if(v[attack_type].indexOf("fir=1") > -1) {
-                    display = display + "Firearms"
+                    display = `${display}${getTranslationByKey("firearms")}\n`
                 }
                 if(v[attack_type].indexOf("ath=1") > -1) {
-                    display = display + "Athletics"
+                    display = `${display}${getTranslationByKey("Athletics")}\n`
                 }
             }
             else if(v.rollstyle === "@{rollsimple}") {
-                display = "Simple Roll";
+                display = `${display}${getTranslationByKey("simple-roll")}\n`
             }
 
             setAttrs({
