Removed obsolete tags, added credible CSS

--- a/The Fantasy Trip/TFT.html
+++ b/The Fantasy Trip/TFT.html
@@ -1,51 +1,45 @@
-<div class=formblock>
-  <thead>
-    <tr>
-      <td><b>Attributes</b></td>
-    </tr>
-  </thead>
-
-  <br>
-  <tr>
-    <td><b>ST</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_ST" value="8"/></td>
-    <td><b>Adj</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_STcurrent" value="8"/></td>
-    <td><button type=roll value="/roll 3d6"></button></td>
-  </tr>
-
-  <br>
-  <tr>
-    <td><b>DX</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_DX" value="8"/></td>
-    <td><b>Adj</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_DXcurrent" value="8"/></td>
-    <td><button type=roll value="/roll 3d6"></button></td>
-  </tr>
-
-  <br>
-  <tr>
-    <td><b>IQ</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_IQ" value="8"/></td>
-    <td><b>Adj</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_IQcurrent" value="8"/></td>
-    <td><button type=roll value="/roll 3d6"></button></td>
-  </tr>
-
-  <br><br>
-  <tr>
-    <td><b>MA</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_MA" value="10"/></td>
-    <td><b>Adj</b></td>
-    <td><input type=number width=5 style='width: 5em;' name="attr_MAcurrent" value="10"/></td>
-  </tr>
-
+<div class="block">
+  <label>Attributes</label>
+  <b>ST</b>
+  <input type=number width=5 style='width: 5em;' name="attr_ST" value="8"/>
+  <b>Adj</b>
+  <input type=number width=5 style='width: 5em;' name="attr_STcurrent" value="8"/>
+  <button type=roll value="/roll 3d6"></button>
 </div>
 
 <br>
-<tr><td valign=top colspan=2>
-  <b>Weapons</b>
-  <br>
+
+<div class="block">
+  <b>DX</b>
+  <input type=number width=5 style='width: 5em;' name="attr_DX" value="8"/>
+  <b>Adj</b>
+  <input type=number width=5 style='width: 5em;' name="attr_DXcurrent" value="8"/>
+  <button type=roll value="/roll 3d6"></button>
+</div>
+
+<br>
+
+<div class="block">
+  <b>IQ</b>
+  <input type=number width=5 style='width: 5em;' name="attr_IQ" value="8"/>
+  <b>Adj</b>
+  <input type=number width=5 style='width: 5em;' name="attr_IQcurrent" value="8"/>
+  <button type=roll value="/roll 3d6"></button>
+</div>
+
+<br>
+
+<div class="block">
+  <b>MA</b>
+  <input type=number width=5 style='width: 5em;' name="attr_MA" value="10"/>
+  <b>Adj</b>
+  <input type=number width=5 style='width: 5em;' name="attr_MAcurrent" value="10"/>
+</div>
+
+<br>
+
+<div class="block">
+  <label>Weapons</label>
   <b style='display: inline-block; width: 10em;'>Name</b>
   <b style='display: inline-block; width: 5em;'>Damage</b>
   <b style='display: inline-block; width: 10em;'>Notes</b>
@@ -53,36 +47,36 @@
   <fieldset class=repeating_weapons>
     <input type=text name=attr_weaponname style='width: 10em;'>
     <input type=text name=attr_weapondamage style='width: 5em;'>
-    <input type=text name=attr_weaponnotes style='width: 20em;'>
-    <td><button type=roll value="/roll @{weapondamage}"></button></td>
+    <input type=text name=attr_weaponnotes style='width: 30em;'>
+    <button type=roll value="/roll @{weapondamage}"></button>
   </fieldset>
-  </td>
-</tr>
+</div>
 
 <br>
-<tr><td valign=top colspan=2>
-  <b>Spells</b>
-  <br>
+
+<div class="block">
+  <label>Spells</label>
   <b style='display: inline-block; width: 10em;'>Name</b>
   <b style='display: inline-block; width: 5em;'>Damage</b>
   <b style='display: inline-block; width: 10em;'>Notes</b>
   <br>
-  <fieldset class=repeating_weapons>
+  <fieldset class=repeating_spells>
     <input type=text name=attr_spellname style='width: 10em;'>
     <input type=text name=attr_spelldamage style='width: 5em;'>
-    <input type=text name=attr_spellnotes style='width: 20em;'>
-    <td><button type=roll value="/roll @{spelldamage}"></button></td>
+    <input type=text name=attr_spellnotes style='width: 30em;'>
+    <button type=roll value="/roll @{spelldamage}"></button>
   </fieldset>
-  </td>
-</tr>
+</div>
 
 <br>
+
 <span class="sheet-spacer"></span>
   <h4 class="sheet-center">Spells and Talents</h4>
   <textarea name="attr_spells" title="Spells"></textarea>
 
 <br>
+
 <span class="sheet-spacer"></span>
   <h4 class="sheet-center">Inventory</h4>
   <textarea name="attr_inventory" title="Inventory"></textarea>
-
+  
