Adding healing boxes to harm section

--- a/Band of Blades/bob.html
+++ b/Band of Blades/bob.html
@@ -7,7 +7,7 @@
 <div class="sheet-settings">
 	<div class="sheet-col100 sheet-version-text"><span>Type name of the Playbook in the appropriate area to populate appropriate ratings/abilities/gear.</span></div>
 	<div class="sheet-col100">
-       <select name="attr_generate_source" title="Choose source">
+    <select name="attr_generate_source" title="Choose source">
            <option value="heavy">Heavy</option>
            <option value="medic">Medic</option>
            <option value="scout">Scout</option>
@@ -46,6 +46,12 @@
    <div class="sheet-col50"><input type="text" name="attr_setting_corruption_label" value="Corruption"/><span></span><span>Label to use for Corruption</span></div>
    <div class="sheet-col50"><input type="text" name="attr_setting_blight_label" value="Blight"/><span></span><span>Label to use for Blight</span></div>
    <div class="sheet-settings-load sheet-col100">
+        <input type="checkbox" name="attr_character" class="sheet-text-input sheet-isLegionaire"/><span>Legionaire</span>
+        <input type="checkbox" name="attr_commander" class="sheet-text-input sheet-isCommander"/><span>Commander</span>
+        <input type="checkbox" name="attr_quartermaster" class="sheet-text-input sheet-isQuartermaster"/><span>Quartermaster</span>
+        <input type="checkbox" name="attr_marshal" class="sheet-text-input sheet-isMarshal"/><span>Marshall</span>
+    </div>
+    <div class="sheet-settings-load sheet-col100">
        <span>Load: </span>
        <input type="number" name="attr_setting_load_l" value="3"/><span> light</span>
        <input type="number" name="attr_setting_load_n" value="5"/><span> normal</span>
@@ -190,38 +196,37 @@
                <div class="sheet-blackheader sheet-harmheader sheet-col100">
                    <div class="sheet-label">Harm</div>
                </div>
-               <div class="sheet-harmrow sheet-col100">
-                   <div class="sheet-label">3</div>
-                   <div>
-                       <div class="sheet-col100">
-                           <input type="text" name="attr_harm3"/>
-                       </div>
+               <div class="sheet-harm-grid sheet-col100">
+                   <div class="sheet-label sheet-harm-three sheet-harmrow">3</div>
+                   <div class="sheet-harm-descriptionthree sheet-harmrow">
+                       <input type="text" name="attr_harm3"/>
                    </div>
-                   <div class="sheet-label">Need Help</div>
-               </div>
-               <div class="sheet-harmrow sheet-col100">
-                   <div class="sheet-label">2</div>
-                   <div>
-                       <div class="sheet-col50">
-                           <input type="text" name="attr_harm2_1"/>
-                       </div>
-                       <div class="sheet-col50">
-                           <input type="text" name="attr_harm2_2"/>
-                       </div>
+                   <div class="sheet-harm-checksthree sheet-harmrow">
+                        <input type="checkbox" name="attr_harm_3_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span><input type="checkbox" name="attr_harm_3_check_2" class="sheet-checkbox sheet-squarebox-small"/><span></span><input type="checkbox" name="attr_harm_3_check_3" class="sheet-checkbox sheet-squarebox-small"/><span></span>
                    </div>
-                   <div class="sheet-label">-1D</div>
-               </div>
-               <div class="sheet-harmrow sheet-col100">
-                   <div class="sheet-label">1</div>
-                   <div>
-                       <div class="sheet-col50">
-                           <input type="text" name="attr_harm1_1"/>
-                       </div>
-                       <div class="sheet-col50">
-                           <input type="text" name="attr_harm1_2"/>
-                       </div>
+                   <div class="sheet-label sheet-harm-labelthree sheet-harmrow">Need Help</div>
+                   <div class="sheet-label sheet-harm-two sheet-harmrow">2</div>
+                   <div class="sheet-harm-descriptiontwoa sheet-harmrow">
+                       <input type="text" name="attr_harm2_1"/>
                    </div>
-                   <div class="sheet-label">Less Effect</div>
+                   <div class="sheet-harm-descriptiontwob sheet-harmrow">
+                       <input type="text" name="attr_harm2_2"/>
+                   </div>
+                   <div class="sheet-harm-checkstwo sheet-harmrow">
+                        <input type="checkbox" name="attr_harm_2_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span><input type="checkbox" name="attr_harm_2_check_2" class="sheet-checkbox sheet-squarebox-small"/><span></span>
+                   </div>
+                   <div class="sheet-label sheet-harm-labeltwo sheet-harmrow">-1D</div>
+                   <div class="sheet-label sheet-harm-one sheet-harmrow">1</div>
+                   <div class="sheet-harm-descriptiononea sheet-harmrow">
+                       <input type="text" name="attr_harm1_1"/>
+                   </div>
+                   <div class="sheet-harm-descriptiononeb sheet-harmrow">
+                       <input type="text" name="attr_harm1_2"/>
+                   </div>
+                   <div class="sheet-harm-checksone sheet-harmrow">
+                        <input type="checkbox" name="attr_harm_1_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span>
+                   </div>
+                   <div class="sheet-label sheet-harm-labelone sheet-harmrow">Less Effect</div>
                </div>
            </div>
 
@@ -1129,3 +1134,4 @@
       });
     });
 </script>
+
