Fixing healing layout.

--- a/Band of Blades/bob.html
+++ b/Band of Blades/bob.html
@@ -202,7 +202,7 @@
                        <input type="text" name="attr_harm3"/>
                    </div>
                    <div class="sheet-harm-checksthree sheet-harmrow">
-                        <input type="checkbox" name="attr_harm_3_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span><input type="checkbox" name="attr_harm_3_check_2" class="sheet-checkbox sheet-squarebox-small"/><span></span><input type="checkbox" name="attr_harm_3_check_3" class="sheet-checkbox sheet-squarebox-small"/><span></span>
+                        <div><input type="checkbox" name="attr_harm_3_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span></div><div><input type="checkbox" name="attr_harm_3_check_2" class="sheet-checkbox sheet-squarebox-small"/><span></span></div><div><input type="checkbox" name="attr_harm_3_check_3" class="sheet-checkbox sheet-squarebox-small"/><span></span></div>
                    </div>
                    <div class="sheet-label sheet-harm-labelthree sheet-harmrow">Need Help</div>
                    <div class="sheet-label sheet-harm-two sheet-harmrow">2</div>
@@ -213,7 +213,7 @@
                        <input type="text" name="attr_harm2_2"/>
                    </div>
                    <div class="sheet-harm-checkstwo sheet-harmrow">
-                        <input type="checkbox" name="attr_harm_2_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span><input type="checkbox" name="attr_harm_2_check_2" class="sheet-checkbox sheet-squarebox-small"/><span></span>
+                        <div><input type="checkbox" name="attr_harm_2_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span></div><div><input type="checkbox" name="attr_harm_2_check_2" class="sheet-checkbox sheet-squarebox-small"/><span></span></div>
                    </div>
                    <div class="sheet-label sheet-harm-labeltwo sheet-harmrow">-1D</div>
                    <div class="sheet-label sheet-harm-one sheet-harmrow">1</div>
@@ -224,7 +224,7 @@
                        <input type="text" name="attr_harm1_2"/>
                    </div>
                    <div class="sheet-harm-checksone sheet-harmrow">
-                        <input type="checkbox" name="attr_harm_1_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span>
+                        <div><input type="checkbox" name="attr_harm_1_check_1" class="sheet-checkbox sheet-squarebox-small"/><span></span></div>
                    </div>
                    <div class="sheet-label sheet-harm-labelone sheet-harmrow">Less Effect</div>
                </div>
