--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -791,7 +791,7 @@
 				        <span class="sheet-table-subheader">Op. Level</span>
 			        </div>
 				    <div class="sheet-table-row">
-			            <span class="sheet-table-data-left" style="vertical-align:middle;"><input title="trick-attack" type="radio" name="attr_trick-attack" checked="true" value="" /><input type="radio" title="trick-attack" name="attr_trick-attack" value="&{template:pf_check}{{name=Trick Attack}}{{check=**CR** [[@{trick-attack-skill} - 20]] or lower }}{{foo=If you succeed at the check, you deal @{trick-attack-level} additional damage and the target is ?{Which condition to apply? | flat-footed,flat-footed | off-target,off-target | bleed,bleeding ?{How much bleed? &amp;#124; 1 &amp;#125; | hampered,hampered (half speed and no guarded step) | interfering,unable to take reactions | staggered,staggered (Fort DC [[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]] negates) | stun,stunned (Fort DC [[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]] negates) | knockout,unconscious for 1 minute (Fort DC [[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]] negates)}. }}" /></span>
+			            <span class="sheet-table-data-left" style="vertical-align:middle;"><input title="trick-attack" type="radio" name="attr_trick-attack" checked="true" value="" /><input type="radio" title="trick-attack" name="attr_trick-attack" value="&{template:pf_check}{{name=Trick Attack}}{{check=**CR**[[@{trick-attack-skill} - 20]]or lower }}{{foo=If you succeed at the check, you deal @{trick-attack-level} additional damage?{Which condition to apply? | none, | flat-footed, and the target is flat-footed | off-target, and the target is off-target | bleed, and the target is bleeding ?{How much bleed? &amp;#124; 1 &amp;#125; | hampered, and the target is hampered (half speed and no guarded step) | interfering, and the target is unable to take reactions | staggered, and the target is staggered (Fort **DC**[[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]]negates) | stun, and the target is stunned (Fort **DC**[[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]]negates) | knockout, and the target is unconscious for 1 minute (Fort **DC**[[10+[[(floor(@{level}/2))]]+[[@{DEX-mod}]]]]negates)} }}" /></span>
 				        <span class="sheet-table-data-left" style="vertical-align:middle;"><b>Trick Attack?</b></span>
 			            <span class="sheet-table-data-center">
 			                <select title="trick-attack-skill" name="attr_trick-attack-skill">
@@ -833,6 +833,11 @@
 		</div>
 	</div>
 	<br>
+    <input type="radio" name="attr_tab2" class="sheet-tab sheet-tab5" value="5" title="Attacks" checked="checked" />
+    <input type="radio" name="attr_tab2" class="sheet-tab sheet-tab6" value="6" title="Equipment" />
+    <input type="radio" name="attr_tab2" class="sheet-tab sheet-tab7" value="7" title="Special Abilities" />
+    <input type="radio" name="attr_tab2" class="sheet-tab sheet-tab8" value="8" title="Spells" />
+    <div class="sheet-tab-content sheet-tab5">
 	<b>Show Weapons?</b>
 	<input type="checkbox" class="sheet-pc-weapons-show" title="weapons-show" name="attr_weapons-show" value="1" checked/>
 	<div class="sheet-pc-weapons">
@@ -897,7 +902,8 @@
 			</fieldset>
 		</div>
 	</div>
-	<br>
+	</div>
+	<div class="sheet-tab-content sheet-tab6">
 	<b>Show Equipment Tables?</b>
 	<input type="checkbox" class="sheet-pc-equipment-show" title="pc-equipment-show" name="attr_pc-equipment-show" value="1" checked/>
 	<div class="sheet-table sheet-pc-equipment">
@@ -1199,7 +1205,8 @@
 			</div>
 		</div>
 	</div>
-	<br>
+	</div>
+	<div class="sheet-tab-content sheet-tab7">
 	<b>Show Feats & Special Abilities?</b>
 	<input type="checkbox" class="sheet-pc-feats-show" title="feats-show" name="attr_feats-show" value="1" checked/>
 	<div class="sheet-pc-feats">
@@ -1240,7 +1247,8 @@
 			</fieldset>
 		</div>
 	</div>
-	<br>
+	</div>
+	<div class="sheet-tab-content sheet-tab8">
 	<b>Show Spells?</b>
 	<input type="checkbox" class="sheet-pc-spells-show" title="spells-show" name="attr_spells-show" value="1" checked/>
 	<div class="sheet-pc-spells">
@@ -1838,6 +1846,7 @@
 				</fieldset>
 			</div>
 		</div>
+	</div>
 	</div>
 </div>
 
